--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Street Fighter</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <div id="loading-overlay">
-      <img src="resources/logo.png"/>
-    </div>
-    <script type="module" src="./src/index.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" />
+        <title>Street Fighter</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+        <div id="loading-overlay">
+            <img src="resources/logo.png" />
+        </div>
+        <audio src="src/assets/steet-fight-kinda-pixabay.mp3" autoplay="true">Play Music</audio>
+        <button data-playing="false" class="user-button" role="switch" aria-checked="false">Play</button>
+
+        <script type="module" src="./src/index.js"></script>
+        <script type="module" src="./src/javascript/services/musicService.js"></script>
+    </body>
 </html>
